--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</nav>
 		<div class="video">
 			<div class="poster heroPoster">
-				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">   
+				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimationLong">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
 					<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd1080&hd=1&controls=0&modestbranding=1&showinfo=0&rel=0&start=62&end=77" type="video/youtube" />
 				</video>
@@ -111,7 +111,7 @@
 	<section class="videoSec">
 		<p class="sectionTitle">Bigger, Stronger, Sharper</p>
 		<div class="video">
-			<div class="poster softAnimation"></div>
+			<div class="poster softAnimationLong"></div>
 			<video controls data-setup='{}' id="techVideoBg" class="video-js" autoplay muted>
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd1080&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=17" type="video/youtube" /> 
 			</video>
@@ -119,7 +119,7 @@
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd1080&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
 			</video>
 			<div class="textVideo">
-				<button class="playBtn softAnimation" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),3)"><img alt="play button" src="icons/play-button.png" class="softAnimation">
+				<button class="playBtn softAnimationLong" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),3)"><img alt="play button" src="icons/play-button.png" class="softAnimation">
 				</button>
 			</div>
 		</div>
